--- a/requirements.txt
+++ b/requirements.txt
@@ -1,42 +1,53 @@
-appnope==0.1.0
-backcall==0.1.0
-bcrypt==3.1.4
+astroid==2.4.2
+autopep8==1.5.4
+backcall==0.2.0
+bcrypt==3.2.0
 blinker==1.4
-certifi==2020.12.5
-cffi==1.14.2
+certifi==2020.6.20
+cffi==1.14.3
 chardet==3.0.4
-Click==7.0
-colorama==0.4.4
-decorator==4.3.0
-Faker==0.9.1
-Flask==1.0.2
+click==7.1.2
+colorama==0.4.3
+decorator==4.4.2
+dnspython==2.0.0
+email-validator==1.1.2
+Flask==1.1.2
 Flask-Bcrypt==0.7.1
-Flask-DebugToolbar==0.10.1
-Flask-SQLAlchemy==2.3.2
-Flask-WTF==0.14.2
+Flask-DebugToolbar==0.11.0
+Flask-SQLAlchemy==2.4.4
+Flask-WTF==0.14.3
+forex-python==1.5
+gunicorn==20.0.4
 idna==2.10
-ipython==7.0.1
+ipython==7.18.1
 ipython-genutils==0.2.0
-itsdangerous==0.24
-jedi==0.13.1
-Jinja2==2.10
-MarkupSafe==1.0
-parso==0.3.1
-pexpect==4.6.0
+isort==5.5.5
+itsdangerous==1.1.0
+jedi==0.17.2
+Jinja2==2.11.2
+lazy-object-proxy==1.4.3
+MarkupSafe==1.1.1
+mccabe==0.6.1
+parso==0.7.1
 pickleshare==0.7.5
-prompt-toolkit==2.0.5
-psycopg2-binary==2.8.4
-ptyprocess==0.6.0
-pycparser==2.19
-Pygments==2.2.0
-python-dateutil==2.7.3
-requests==2.25.0
-simplegeneric==0.8.1
-six==1.11.0
-SQLAlchemy==1.2.12
-text-unidecode==1.2
-traitlets==4.3.2
-urllib3==1.26.2
-wcwidth==0.1.7
-Werkzeug==0.14.1
-WTForms==2.2.1
+prompt-toolkit==3.0.7
+psycopg2-binary==2.8.6
+pycodestyle==2.6.0
+pycparser==2.20
+Pygments==2.7.1
+pylint==2.6.0
+pylint-flask==0.6
+pylint-flask-sqlalchemy==0.2.0
+pylint-plugin-utils==0.6
+requests==2.24.0
+simplejson==3.17.2
+six==1.15.0
+SQLAlchemy==1.3.20
+toml==0.10.1
+traitlets==5.0.4
+typed-ast==1.4.1
+urllib3==1.25.11
+wcwidth==0.2.5
+Werkzeug==1.0.1
+wrapt==1.12.1
+WTForms==2.3.3
